@@ -6,6 +6,8 @@ Version 1.5.11+svn:
   * Language and translations
     * updated translations: Chinese (Simplified), Czech, French, Polish,
       Portuguese (Brazil), Spanish, Turkish.
+  * User interface
+    * Listbox columns have the same width again.
 
 Version 1.5.11:
   * Graphics
