@@ -7,6 +7,8 @@ Version 1.5.11+svn:
  * Miscellaneous and bug fixes:
    * Removed last binaryWML references by making the save_index gzip
      compressed. (We can still receive binaryWML via the network.)
+ * User interface:
+   * Listbox columns have the same width again
 
 Version 1.5.11:
  * Campaigns:
